force-app/main/default/objects/Candidate_Checklist__c/Candidate_Checklist__c.object-meta.xml
<CustomObject>
    <label>Candidate Checklist</label>
    <nameField>
        <displayFormat>CCN-{00000}</displayFormat>
        <label>Candidate Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Checklists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>