force-app/main/default/objects/Candidate_Checklist__c/fields/Advantage_Credit_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Advantage_Credit_Credentials__c</fullName>
    <label>Advantage Credit Credentials</label>
    <type>Date</type>
</CustomField>