force-app/main/default/objects/Candidate_Checklist__c/fields/Angel_Oak_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Angel_Oak_Credentials__c</fullName>
    <label>Angel Oak Credentials</label>
    <type>Date</type>
</CustomField>