force-app/main/default/objects/Candidate_Checklist__c/fields/ARIVE_Credentials_Setup_Complete__c.field-meta.xml
<CustomField>
    <fullName>ARIVE_Credentials_Setup_Complete__c</fullName>
    <label>ARIVE Credentials/Setup Complete</label>
    <type>Date</type>
</CustomField>