force-app/main/default/objects/Candidate_Checklist__c/fields/ARIVE_File_Contact_Defaults_Setup__c.field-meta.xml
<CustomField>
    <fullName>ARIVE_File_Contact_Defaults_Setup__c</fullName>
    <label>ARIVE File Contact Defaults Setup</label>
    <type>Date</type>
</CustomField>