force-app/main/default/objects/Candidate_Checklist__c/fields/ARIVE_Unique_POS_Application_Link__c.field-meta.xml
<CustomField>
    <fullName>ARIVE_Unique_POS_Application_Link__c</fullName>
    <label>ARIVE Unique POS Application Link</label>
    <type>Date</type>
</CustomField>