force-app/main/default/objects/Candidate_Checklist__c/fields/Background_Check_Complete__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Complete__c</fullName>
    <label>Background Check Complete</label>
    <type>Date</type>
</CustomField>