force-app/main/default/objects/Candidate_Checklist__c/fields/BSA_AML_Training_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>BSA_AML_Training_Enrollment__c</fullName>
    <label>BSA/AML Training Enrollment</label>
    <type>Date</type>
</CustomField>