force-app/main/default/objects/Candidate_Checklist__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Candidate Checklists</relationshipLabel>
    <relationshipName>Candidate_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>