force-app/main/default/objects/Candidate_Checklist__c/fields/CIC_Credit_Credentials__c.field-meta.xml
<CustomField>
    <fullName>CIC_Credit_Credentials__c</fullName>
    <label>CIC Credit Credentials</label>
    <type>Date</type>
</CustomField>