force-app/main/default/objects/Candidate_Checklist__c/fields/Compensation_Form_Signed__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Form_Signed__c</fullName>
    <label>Compensation Form Signed</label>
    <type>Date</type>
</CustomField>