force-app/main/default/objects/Candidate_Checklist__c/fields/Computer_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Computer_Assigned__c</fullName>
    <label>Computer Assigned</label>
    <type>Date</type>
</CustomField>