force-app/main/default/objects/Candidate_Checklist__c/fields/Disable_ARIVE_Email_Templates__c.field-meta.xml
<CustomField>
    <fullName>Disable_ARIVE_Email_Templates__c</fullName>
    <label>Disable ARIVE Email Templates</label>
    <type>Date</type>
</CustomField>