force-app/main/default/objects/Candidate_Checklist__c/fields/Docusign_Package_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Package_Delivered__c</fullName>
    <inlineHelpText>Offer Letter, Job Description, Compensation Form, Handbook</inlineHelpText>
    <label>Docusign Package Delivered</label>
    <type>Date</type>
</CustomField>