force-app/main/default/objects/Candidate_Checklist__c/fields/Ease_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Ease_Credentials__c</fullName>
    <label>Ease Credentials</label>
    <type>Date</type>
</CustomField>