force-app/main/default/objects/Candidate_Checklist__c/fields/Email_Distribution_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Email_Distribution_Assigned__c</fullName>
    <label>Email Distribution Assigned</label>
    <type>DateTime</type>
</CustomField>