force-app/main/default/objects/Candidate_Checklist__c/fields/Email_Signature_Setup__c.field-meta.xml
<CustomField>
    <fullName>Email_Signature_Setup__c</fullName>
    <label>Email Signature Setup</label>
    <type>Date</type>
</CustomField>