force-app/main/default/objects/Candidate_Checklist__c/fields/Employee_Handbook_Sent__c.field-meta.xml
<CustomField>
    <fullName>Employee_Handbook_Sent__c</fullName>
    <label>Employee Handbook Sent</label>
    <type>Date</type>
</CustomField>