force-app/main/default/objects/Candidate_Checklist__c/fields/Encompass_Gold_Star_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Encompass_Gold_Star_Credentials__c</fullName>
    <label>Encompass/Gold Star Credentials</label>
    <type>Date</type>
</CustomField>