force-app/main/default/objects/Candidate_Checklist__c/fields/Flagstar_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Flagstar_Credentials__c</fullName>
    <label>Flagstar Credentials</label>
    <type>Date</type>
</CustomField>