force-app/main/default/objects/Candidate_Checklist__c/fields/Google_Chrome_Hyperlinks_Bookmarked__c.field-meta.xml
<CustomField>
    <fullName>Google_Chrome_Hyperlinks_Bookmarked__c</fullName>
    <label>Google Chrome Hyperlinks Bookmarked</label>
    <type>Date</type>
</CustomField>