force-app/main/default/objects/Candidate_Checklist__c/fields/Headshot_Posted__c.field-meta.xml
<CustomField>
    <fullName>Headshot_Posted__c</fullName>
    <label>Headshot Posted</label>
    <type>Date</type>
</CustomField>