force-app/main/default/objects/Candidate_Checklist__c/fields/I9_Docs_Received__c.field-meta.xml
<CustomField>
    <fullName>I9_Docs_Received__c</fullName>
    <inlineHelpText>Docs for List A or B + C scanned</inlineHelpText>
    <label>I9 Docs Received</label>
    <type>Date</type>
</CustomField>