force-app/main/default/objects/Candidate_Checklist__c/fields/Job_Description_Form_Signed__c.field-meta.xml
<CustomField>
    <fullName>Job_Description_Form_Signed__c</fullName>
    <label>Job Description Form Signed</label>
    <type>Date</type>
</CustomField>