force-app/main/default/objects/Candidate_Checklist__c/fields/Lead_follow_up_text_templates__c.field-meta.xml
<CustomField>
    <fullName>Lead_follow_up_text_templates__c</fullName>
    <label>Lead follow up text templates</label>
    <type>Date</type>
</CustomField>