force-app/main/default/objects/Candidate_Checklist__c/fields/Licensing_Store_New_Hire_NMLS_Added__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Store_New_Hire_NMLS_Added__c</fullName>
    <label>Licensing Store New Hire NMLS Added</label>
    <type>Date</type>
</CustomField>