force-app/main/default/objects/Candidate_Checklist__c/fields/Microsoft_Setup_Complete_with_IT__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_Setup_Complete_with_IT__c</fullName>
    <inlineHelpText>Email, TEAMS, OneDrive, etc.</inlineHelpText>
    <label>Microsoft Setup Complete with IT</label>
    <type>Date</type>
</CustomField>