force-app/main/default/objects/Candidate_Checklist__c/fields/NewRez_Credentials__c.field-meta.xml
<CustomField>
    <fullName>NewRez_Credentials__c</fullName>
    <label>NewRez Credentials</label>
    <type>Date</type>
</CustomField>