force-app/main/default/objects/Candidate_Checklist__c/fields/Notice_of_Termination_in_Folder__c.field-meta.xml
<CustomField>
    <fullName>Notice_of_Termination_in_Folder__c</fullName>
    <label>Notice of Termination in Folder</label>
    <type>Date</type>
</CustomField>