force-app/main/default/objects/Candidate_Checklist__c/fields/Offer_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Offer_Letter_Sent__c</fullName>
    <label>Offer Letter Sent</label>
    <type>Date</type>
</CustomField>