force-app/main/default/objects/Candidate_Checklist__c/fields/Offer_Letter_Signed__c.field-meta.xml
<CustomField>
    <fullName>Offer_Letter_Signed__c</fullName>
    <label>Offer Letter Signed</label>
    <type>Date</type>
</CustomField>