force-app/main/default/objects/Candidate_Checklist__c/fields/Outlook_Setup__c.field-meta.xml
<CustomField>
    <fullName>Outlook_Setup__c</fullName>
    <label>Outlook Setup</label>
    <type>Date</type>
</CustomField>