force-app/main/default/objects/Candidate_Checklist__c/fields/Paychex_Onboarding_Complete__c.field-meta.xml
<CustomField>
    <fullName>Paychex_Onboarding_Complete__c</fullName>
    <label>Paychex Onboarding Complete</label>
    <type>Date</type>
</CustomField>