force-app/main/default/objects/Candidate_Checklist__c/fields/Reach_Welcome_Gear_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Reach_Welcome_Gear_Delivered__c</fullName>
    <label>Reach Welcome Gear Delivered</label>
    <type>Date</type>
</CustomField>