force-app/main/default/objects/Candidate_Checklist__c/fields/Removed_from_NMLS_and_Documented__c.field-meta.xml
<CustomField>
    <fullName>Removed_from_NMLS_and_Documented__c</fullName>
    <label>Removed from NMLS and Documented</label>
    <type>Date</type>
</CustomField>