force-app/main/default/objects/Candidate_Checklist__c/fields/RHL_Go_To_List_Delivered__c.field-meta.xml
<CustomField>
    <fullName>RHL_Go_To_List_Delivered__c</fullName>
    <inlineHelpText>Team Introduction</inlineHelpText>
    <label>RHL Go To List Delivered</label>
    <type>Date</type>
</CustomField>