force-app/main/default/objects/Candidate_Checklist__c/fields/Salesforce_Credentials_Complete__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Credentials_Complete__c</fullName>
    <label>Salesforce Credentials Complete</label>
    <type>Date</type>
</CustomField>