force-app/main/default/objects/Candidate_Checklist__c/fields/Set_Up_ARIVE_Email_Signature__c.field-meta.xml
<CustomField>
    <fullName>Set_Up_ARIVE_Email_Signature__c</fullName>
    <label>Set Up ARIVE Email Signature</label>
    <type>Date</type>
</CustomField>