force-app/main/default/objects/Candidate_Checklist__c/fields/Set_up_ARIVE_PA_Letter_Signature__c.field-meta.xml
<CustomField>
    <fullName>Set_up_ARIVE_PA_Letter_Signature__c</fullName>
    <label>Set up ARIVE PA Letter/Signature</label>
    <type>Date</type>
</CustomField>