force-app/main/default/objects/Candidate_Checklist__c/fields/Set_up_public_groups_for_sharing_in_SF__c.field-meta.xml
<CustomField>
    <fullName>Set_up_public_groups_for_sharing_in_SF__c</fullName>
    <label>Set up public groups for sharing in SF</label>
    <type>DateTime</type>
</CustomField>