force-app/main/default/objects/Candidate_Checklist__c/fields/Set_Up_Ring_Central__c.field-meta.xml
<CustomField>
    <fullName>Set_Up_Ring_Central__c</fullName>
    <label>Set Up Ring Central</label>
    <type>DateTime</type>
</CustomField>