force-app/main/default/objects/Candidate_Checklist__c/fields/Start_Date_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Confirmed__c</fullName>
    <label>Start Date Confirmed</label>
    <type>Date</type>
</CustomField>