force-app/main/default/objects/Candidate_Checklist__c/fields/Symmetry_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Symmetry_Credentials__c</fullName>
    <label>Symmetry Credentials</label>
    <type>Date</type>
</CustomField>