force-app/main/default/objects/Candidate_Checklist__c/fields/Trainual_Credentials_Subjects_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Trainual_Credentials_Subjects_Assigned__c</fullName>
    <label>Trainual Credentials/Subjects Assigned</label>
    <type>Date</type>
</CustomField>