force-app/main/default/objects/Candidate_Checklist__c/fields/Twilio_Account_Reach_Out_to_SF_Admin__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Account_Reach_Out_to_SF_Admin__c</fullName>
    <label>Twilio Account – Reach Out to SF Admin</label>
    <type>DateTime</type>
</CustomField>