force-app/main/default/objects/Candidate_Checklist__c/fields/Upload_Existing_Business_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Upload_Existing_Business_Contacts__c</fullName>
    <inlineHelpText>If they choose to do so</inlineHelpText>
    <label>Upload Existing Business Contacts</label>
    <type>Date</type>
</CustomField>