force-app/main/default/objects/Candidate_Checklist__c/fields/UWM_Credentials__c.field-meta.xml
<CustomField>
    <fullName>UWM_Credentials__c</fullName>
    <label>UWM Credentials</label>
    <type>Date</type>
</CustomField>