force-app/main/default/objects/Candidate_Checklist__c/fields/Welcome_Email__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Email__c</fullName>
    <label>Welcome Email</label>
    <type>Date</type>
</CustomField>