force-app/main/default/objects/Candidate_Checklist__c/fields/Windsor_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Windsor_Credentials__c</fullName>
    <label>Windsor Credentials</label>
    <type>Date</type>
</CustomField>